--- a/static/popup.css
+++ b/static/popup.css
@@ -76,7 +76,7 @@ html, body {
  * TabGroup component
  */
 .tab-group {
-  margin: 0 10px 10px 10px;
+  margin: 0 auto 10px auto;
   width: 280px;
   display: block;
 
