--- a/static/popup.css
+++ b/static/popup.css
@@ -7,7 +7,8 @@
 
 html, body {
   font-family: -apple-system, BlinkMacSystemFont, "Roboto", "Ubuntu", "Segoe UI", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-  height: 420px;
+  font-size: 16px;
+  height: 26.25rem;
 
   background: #F8F8F8;
 }
@@ -16,8 +17,8 @@ html, body {
  * Higher level layout and aesthetic rules for NewTab
  */
 .popup {
-  height: 420px;
-  width: 300px;
+  height: 26.25rem;
+  width: 18.75rem;
   color: #2B2B2B;
 }
 
@@ -27,7 +28,7 @@ html, body {
   .popup--tab-groups {
     text-align: left;
     margin-top: 20px;
-    height: 333px;
+    height: 20rem;
     overflow: auto;
   }
 
@@ -37,30 +38,29 @@ html, body {
 .sleep-window-button {
   margin: 10px;
   margin-top: 20px;
-  width: 280px;
+  width: calc(100% - 20px);
   height: 48px;
   display: block;
   cursor: pointer;
   background: #2196F3;
   border: none;
-  border-radius: 2px;
+  border-radius: 3px;
   color: white;
   font-family: -apple-system, BlinkMacSystemFont, "Roboto", "Ubuntu", "Segoe UI", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.16), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.2s ease-in-out;
 }
 
 .sleep-window-button:hover {
   background: #319EF5;
 
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  box-shadow: 0 1px 8px rgba(0, 0, 0, 0.12), 0 1px 8px rgba(0, 0, 0, 0.23);
 }
 
   .sleep-window-button span {
     line-height: 24px;
     font-size: 16px;
-    text-transform: capitalize;
   }
 
     .sleep-window-button .icon {
@@ -77,34 +77,38 @@ html, body {
  */
 .tab-group {
   margin: 0 auto 10px auto;
-  width: 280px;
+  width: calc(100% - 20px);
   display: block;
 
   border: none;
-  border-radius: 2px;
+  border-radius: 3px;
   background: white;
 
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.2s ease-in-out;
 
-  font-size: 15px;
+  font-size: 1rem;
 }
 
   .tab-group--title-action-container {
     display: flex;
     flex-direction: row;
 
-    padding: 0.75rem;
+    padding: 0.75rem 0.75rem 0.25rem;
   }
 
     .tab-group--title {
       display: inline-block;
       flex: 1;
 
+      padding-top: 0.25em;
+
       text-align: left;
       font-weight: 400;
 
-      font-size: 12px;
+      font-size: 0.75rem;
+      text-transform: uppercase;
+      letter-spacing: 0.1em;
       color: #777777;
     }
 
@@ -153,7 +157,9 @@ html, body {
   .tab-group--expand {
     padding: 0.75rem;
     padding-top: 0;
-    font-size: 12px;
+    font-size: 0.75rem;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
     text-align: right;
     color: #1976D2;
   }
