Potentially hacky import/export

--- a/static/base.css
+++ b/static/base.css
@@ -8,32 +8,92 @@
 html, body {
   font-family: -apple-system, BlinkMacSystemFont, "Roboto", "Ubuntu", "Segoe UI", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   font-size: 16px;
-  height: 26.25rem;
+  height: 420px;
 
   background: #F8F8F8;
+}
+
+.ml-1 {
+  margin-left: 0.5rem;
 }
 
 .icon {
   vertical-align: middle;
 }
 
+h1, h2 {
+  font-family: -apple-system, BlinkMacSystemFont, "Roboto", "Ubuntu", "Segoe UI", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+
+  text-align: left;
+  font-weight: 400;
+  font-size: 1.25rem;
+  color: #777777;
+
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
+
+h2 {
+  font-size: 1rem;
+}
+
+/**
+ * Data management styles
+ */
+.manage-data {
+  padding: 0 10px;
+  max-width: 720px;
+  min-width: 320px;
+  margin: 0 auto;
+}
+
+  .manage-data--global-actions {
+    margin: 1rem 0;
+  }
+
+  .manage-data--tab-group-row {
+  }
+
+    .manage-data--tab-group {
+      display: inline-block;
+      width: calc(100% - 120px - 1rem);
+    }
+
+      .manage-data--tab-group .tab-group {
+        width: 100%;
+      }
+
+    .manage-data--tab-group-actions {
+      display: inline-block;
+      vertical-align: top;
+      width: 120px;
+    }
+
 /**
  * Higher level layout and aesthetic rules for NewTab
  */
 .popup {
-  height: 26.25rem;
-  width: 18.75rem;
+  height: 420px;
+  width: 300px;
   color: #2B2B2B;
+  display: flex;
+  flex-direction: column;
 }
+
+  .primary-action {
+  }
 
   /**
    * Tab Groups section
    */
   .popup--tab-groups {
     text-align: left;
-    margin-top: 20px;
-    height: 20rem;
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
+    flex-grow: 1;
   }
 
 /**
@@ -52,6 +112,40 @@ html, body {
 
   .back-action .back-action--text {
     vertical-align: text-bottom;
+  }
+
+/**
+ * Form components
+ */
+.input-group {
+  margin-top: 0.5rem;
+}
+
+.btn {
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+  font-family: -apple-system, BlinkMacSystemFont, "Roboto", "Ubuntu", "Segoe UI", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  transition: all 0.2s ease-in-out;
+}
+
+  .btn.btn-primary {
+    background: #2196F3;
+    color: white;
+  }
+
+  .btn.btn-primary:hover {
+    background: #319EF5;
+  }
+
+  .btn.btn-secondary {
+    background: #FFFFFF;
+    color: #444444;
+  }
+
+  .btn.btn-secondary:hover {
+    background: #DDDDDD;
   }
 
 /**
@@ -153,6 +247,13 @@ html, body {
         margin: 0;
         margin-left: 0.5rem;
       }
+
+  .tab-group--edit-form {
+    display: flex;
+    flex-direction: column;
+
+    padding: 0.75rem;
+  }
 
 
   .tab-group--urls {
